--- a/integrations/esri-sceneview-wasm/css/buttons.css
+++ b/integrations/esri-sceneview-wasm/css/buttons.css
@@ -15,6 +15,12 @@
   font-size: 16px;
 }
 
+.chosen {
+  outline: none;
+  font-weight: 700;
+  color: #c1e4e4;
+}
+
 .btn:hover {
   transition: transform .25s;
   transform: scale(1.1);
