Setting up new Esri udSDK integration Demo base code Added Cross-Origin-Isolated delay trial token.

--- a/integrations/esri-sceneview-wasm/css/buttons.css
+++ b/integrations/esri-sceneview-wasm/css/buttons.css
@@ -27,12 +27,12 @@
 }
 
 /* Button position */
-.btn.gbr {
+.btn.mel {
   top: -125px; 
   left: calc(10% + 15px); 
 }
 
-.btn.asmd {
+.btn.bxg {
   top: -125px;
   left: calc(10% + 15px);
 }
