--- a/integrations/esri-sceneview-wasm/css/buttons.css
+++ b/integrations/esri-sceneview-wasm/css/buttons.css
@@ -2,17 +2,17 @@
   font-family: "source-sans-pro";
   animation: fadeIn ease 2s;
   background-color: rgba(10, 14, 16, 0.9);
-  width: 200px;
+  width: 125px;
   height: 36px;
-  margin-right: 5px;
   border: none;
   cursor: pointer;
   position: relative;
   text-align: left;
   color: white;
+  font-size: 18px;
   border: none;
   display: block;
-  font-size: 16px;
+  padding-top: 5px;
 }
 
 .chosen {
@@ -22,17 +22,17 @@
 }
 
 .btn:hover {
-  transition: transform .25s;
-  transform: scale(1.1);
+  font-weight: 700;
+  color: #c1e4e4;
 }
 
 /* Button position */
 .btn.mel {
-  top: -125px; 
+  top: -100px; 
   left: calc(10% + 15px); 
 }
 
 .btn.bxg {
-  top: -125px;
+  top: -100px;
   left: calc(10% + 15px);
 }
